--- a/daily checkin.html
+++ b/daily checkin.html
@@ -66,7 +66,7 @@
                     </div>
                     <!-- task button -->
                     <div class="task button">
-                        <button class="task-btn">GO!</button>
+                        <button class="task-btn"><a href="">GO!</a></button>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     </div>
                     <!-- task button -->
                     <div class="task button">
-                        <button class="task-btn">GO!</button>
+                        <button class="task-btn"><a href="">GO!</a></button>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     </div>
                     <!-- task button -->
                     <div class="task button">
-                        <button class="task-btn">GO!</button>
+                        <button class="task-btn"><a href="">GO!</a></button>
                     </div>
                 </div>
             </div>
