--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                     <p class="lvl"><a href="level.html">Level 1</a></p>
                 </div>
                 <!-- homepage progress bar -->
+                <!-- <label for="progress-bar">PROGRESS BAR</label>
+                <progress id="progress-bar" max="100" value="50"></progress> -->
                 <div class="progress-gradient">
                     <div class="gradient-bar"></div>
                 </div>
