--- a/updates.html
+++ b/updates.html
@@ -25,8 +25,8 @@
             <div class="update-container">
                 <!-- update notice -->
                 <div class="update-notice">
-                    <div class="update-notice-text">
-                        <p class="updates-big">Airdrop is Coming❕</p>
+                    <div class="update-notice-box">
+                        <p class="updates-big">Airdrop is Coming!</p>
                         <p class="updates-small">Stay tuned...</p>
                     </div>
                 </div>
