--- a/level.html
+++ b/level.html
@@ -47,7 +47,7 @@
                             <p>1000/4hrs</p>
                             <!-- level upgred-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                             <p>1500/4hrs</p>
                             <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <p>3000/4hrs</p>
                             <!-- level uprade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                             <!-- level requirement -->
                             <div class="requirement">
@@ -98,7 +98,7 @@
                             </div>
                             <!-- level bypass-btn -->
                             <div class="Bypass-btn">
-                                <button onclick="changeClr()" id="btn">ByPass</button>
+                                <button onclick="changeClr()" id="bypass-btn">ByPass</button>
                             </div>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                             <p>4000/4hrs</p>
                             <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                             <p>7000/4hrs</p>
                             <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                             <!-- level uprade-requirement -->
                             <div class="requirement">
@@ -152,7 +152,7 @@
                             </div>
                             <!-- level bypass-btn -->
                             <div class="Bypass-btn">
-                                <button onclick="changeClr()" id="btn">ByPass</button>
+                                <button onclick="changeClr()" id="bypass-btn">ByPass</button>
                             </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                             <p>10,000/4hrs</p>
                             <!-- level upgrade btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                 <div class="level-box">
                     <!-- level box1 -->
                     <div class="level-box1">
-                        <img src="images/IMG_2535.PNG">
+                        <img src="images/lvl7.PNG">
                         <!-- level box-text -->
                         <div class="lvlbox-text">
                             <!-- level name -->
@@ -189,7 +189,7 @@
                             <p>13,000/4hrs</p>
                             <!-- level-upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                             <!-- level upgrade requirement section -->
                             <div class="requirement">
@@ -204,14 +204,14 @@
                             </div>
                             <!-- level bypass-btn -->
                             <div class="Bypass-btn">
-                                <button onclick="changeClr()" id="btn">ByPass</button>
+                                <button onclick="changeClr()" id="bypass-btn">ByPass</button>
                             </div>
                         </div>
                     </div>
                     <!-- level box1 -->
                     <div class="level-box1">
                         <!-- level img -->
-                        <img src="images/IMG_2675.PNG" width="20px, height: 30px">
+                        <img src="images/lvl8.PNG" width="20px, height: 30px">
                         <!-- level box-text -->
                         <div class="lvlbox-text">
                             <p class="lvl-name">Lv8-Cato</p>
@@ -219,14 +219,14 @@
                             <p>15,000/4hrs</p>
                             <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                         </div>
                     </div>
                     <!-- level box1 -->
                     <div class="level-box1">
                         <!-- level image -->
-                        <img src="images/IMG_2663.PNG" width="20px, height: 30px">
+                        <img src="images/lvl9.PNG" width="20px, height: 30px">
                         <!-- level box-text -->
                         <div class="lvlbox-text">
                             <!-- level name -->
@@ -237,7 +237,7 @@
                             <p>17,000/4hrs</p>
                             <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                             <!-- level requirement -->
                             <div class="requirement">
@@ -252,7 +252,7 @@
                             </div>
                             <!-- level bypass-btn -->
                             <div class="Bypass-btn">
-                                <button onclick="changeClr()" id="btn">ByPass</button>
+                                <button onclick="changeClr()" id="bypass-btn">ByPass</button>
                             </div>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                     <!-- level box1 -->
                     <div class="level-box1">
                         <!-- level image -->
-                        <img src="images/IMG_2672.PNG" width="20px, height: 30px">
+                        <img src="images/lvl10.PNG" width="20px, height: 30px">
                         <!-- level box-text -->
                         <div class="lvlbox-text">
                             <!-- level name -->
@@ -274,14 +274,14 @@
                             <p>19,000/4hrs</p>
                             <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                         </div>
                     </div>
                     <!-- level box1 -->
                     <div class="level-box1">
                         <!-- level image -->
-                        <img src="images/lvl5.PNG" width="20px, height: 30px">
+                        <img src="images/lvl11.PNG" width="20px, height: 30px">
                         <!-- level-box-text -->
                         <div class="lvlbox-text">
                             <!-- level-name -->
@@ -291,18 +291,18 @@
                             <p>20,000/4hrs</p>
                             <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                             <!-- level bypass-btn -->
                             <div class="Bypass-btn">
-                                <button onclick="changeClr()" id="btn">ByPass</button>
+                                <button onclick="changeClr()" id="bypass-btn">ByPass</button>
                             </div>
                         </div>
                     </div>
                     <!-- level box1 -->
                     <div class="level-box1">
                         <!-- level image -->
-                        <img src="images/lvl6.PNG" width="20px, height: 30px">
+                        <img src="images/lvl12.PNG" width="20px, height: 30px">
                         <!-- level box-text -->
                         <div class="lvlbox-text">
                             <!-- level name -->
@@ -311,11 +311,11 @@
                             <p>Telegram Stars</p>
                             <!-- level-upgrade-btn -->
                             <div class="upgrade-btn">
-                                <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
+                                <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
                             </div>
                             <!-- level bypass-btn -->
                             <div class="Bypass-btn">
-                                <button onclick="changeClr()" id="btn">ByPass</button>
+                                <button onclick="changeClr()" id="bypass-btn">ByPass</button>
                             </div>
                         </div>
                     </div>
