--- a/mission.html
+++ b/mission.html
@@ -69,7 +69,8 @@
                         </div>
                         <!-- mission-boxes -->
                         <div class="mission-boxes">
-                            <img src="images/telegram-svgrepo-com.svg">
+                            <img
+                                src="images/telegram-communication-chat-interaction-network-connection-svgrepo-com.svg">
                             <div class="mission-boxes1">
                                 <!-- mission task -->
                                 <p>Join Ton Catel on Telegram</p>
@@ -95,7 +96,7 @@
                         </div>
                         <!-- mission-boxes -->
                         <div class="mission-boxes">
-                            <img src="images/gamepad-svgrepo-com (2).svg">
+                            <img src="images/game-console-gamepad-svgrepo-com.svg">
                             <div class="mission-boxes1">
                                 <!-- mission task -->
                                 <p>Play Tomarket</p>
@@ -120,13 +121,11 @@
                             </div>
                         </div>
 
-
-                        <!-- mission-promo-link -->
-                        <div class="promo-link">
-                            <button class="promo-btn">Click here for promo and partnership</button>
-                        </div>
                     </div>
-
+                    <!-- mission-promo-link -->
+                    <div class="promo-link">
+                        <button class="promo-btn">Click here for promo and partnership</button>
+                    </div>
                 </div>
             </div>
         </div>
