--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                     <p class="lvl"><a href="level.html">Level 1</a></p>
                 </div>
                 <!-- homepage progress bar -->
-                <!-- <label for="progress-bar">PROGRESS BAR</label>
-                <progress id="progress-bar" max="100" value="50"></progress> -->
-                <div class="progress-gradient">
+                <label for="progress-bar"></label>
+                <progress id="progress-bar" max="100" value="50"></progress>
+                <!-- <div class="progress-gradient">
                     <div class="gradient-bar"></div>
-                </div>
+                </div> -->
             </div>
             <!-- homepage bonus box -->
             <div class="box-award">
@@ -123,7 +123,12 @@
                 </div>
                 <!-- main-box-farming-btn -->
                 <div class="farming-btn">
-                    <button onclick="changeText()" id="btn">Start Farming</button>
+                    <button id="farmingBtn" class="start-farming-btn" onclick="startFarming()">
+                        <span id="farmingText">Start Farming</span>
+                        <img id="farmingImg" src="images/Transparent Ton Catel logo.png"
+                            style="height: 20px; width: 20px;">
+                        <span class="timer" id="timer">04:00:00</span>
+                    </button>
                 </div>
             </div>
         </div>
