--- a/level.html
+++ b/level.html
@@ -197,7 +197,7 @@
                                     <label>Coins</label>
                                     <input type="checkbox">
                                 </div>
-                                <div class="requirements2">
+                                <div class="requirement2">
                                     <label>10 Recruit</label>
                                     <input type="checkbox">
                                 </div>
@@ -245,7 +245,7 @@
                                     <label>Coins</label>
                                     <input type="checkbox">
                                 </div>
-                                <div class="requirements2">
+                                <div class="requirement2">
                                     <label>15 Recruit</label>
                                     <input type="checkbox">
                                 </div>
