--- a/level.html
+++ b/level.html
@@ -319,6 +319,33 @@
                             </div>
                         </div>
                     </div>
+                    <!-- locked -->
+                    <div class="level-box1">
+                        <!-- locked -->
+                        <div class="locked">
+
+                        </div>
+                        <div class="level-item">
+                            <!-- level image -->
+                            <img src="images/lvl12.PNG" width="20px, height: 30px">
+                            <!-- level box-text -->
+                            <div class="lvlbox-text">
+                                <!-- level name -->
+                                <p class="lvl-name">Lv12-Gato</p>
+                                <p>GP</p>
+                                <p>Telegram Stars</p>
+                                <!-- level-upgrade-btn -->
+                                <div class="upgrade-btn">
+                                    <button onclick="upgradeClr()" id="upgrade-btn">Upgrade</button>
+                                </div>
+                                <!-- level bypass-btn -->
+                                <div class="Bypass-btn">
+                                    <button onclick="changeClr()" id="bypass-btn">ByPass</button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
