--- a/invites.html
+++ b/invites.html
@@ -29,9 +29,12 @@
             </div>
             <!-- invites-upgrade -->
             <div class="invites-upgrade">
-                <p>Limit-50 Invites</p>
-                <p>⇾</p>
-                <p>Upgrade to 100</p>
+                <button>
+                    <p>Limit-50 Invites</p>
+                    <p>⇾</p>
+                    <p>Upgrade to 100</p>
+                </button>
+
             </div>
             <!-- invites-coin amount -->
             <div class="invites-coin">
@@ -42,7 +45,7 @@
             </div>
             <!-- invites-claim btn -->
             <div class="invite-claim">
-                <button id="btn-claim">Claim</button>
+                <button onclick="claim()" id="btn-claim">Claim</button>
             </div>
             <!-- invite-notice -->
             <div class="invites-notice">
