--- a/mission.html
+++ b/mission.html
@@ -47,11 +47,11 @@
                 </div>
                 <!-- mission-option -->
                 <div class="mission-option">
-                    <button type="button" class="opt toggle-btn" onclick="activebtn()">Active</button>
-                    <button type="button" class="toggle-btn1" onclick="completebtn()">Complete</button>
+                    <button type="button" id="opt1" onclick="activebtn()">Active</button>
+                    <button type="button" id="opt" onclick="completebtn()">Complete</button>
                 </div>
                 <!-- mission-box-container-->
-                <div id="activeTask" class="mission-box-container">
+                <div id="activeTasks" class="mission-box-container">
                     <!-- mission-box -->
                     <div class="mission-box">
                         <!-- mission-boxes -->
@@ -124,29 +124,14 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <!-- mission-promo-link -->
                     <div class="promo-link">
                         <button class="promo-btn">Click here for promo and partnership</button>
                     </div>
                 </div>
-                <div id="taskComplete" class="mission-box-container">
+                <div id="completedTasks" class="mission-box-container completed-tasks">
                     <!-- mission-box -->
-                    <div class="mission-box">
-                        <div class="mission-boxes">
-                            <img src="images/icons8-twitterx (2).svg">
-                            <div class="mission-boxes1">
-                                <!-- mission task -->
-                                <p>Join Ton Catel on X</p>
-                                <div class="mission-boxes2">
-                                    <p>+500</p>
-                                    <!-- mission start-btn -->
-                                    <button class="mission-btn"><a href="verify.html">Start</a></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                 </div>
             </div>
@@ -164,7 +149,7 @@
                     </div>
                     <!-- verify header -->
                     <div class="mission-header">
-                        <p>Missions</p>
+                        <p>Verify</p>
                     </div>
                     <!-- verify info -->
                     <div class="mission-info">
@@ -207,7 +192,7 @@
                         </div>
                         <!-- verify btn -->
                         <div class="verify-btns">
-                            <button class="verify-btn">Yes, verify.</button>
+                            <button onclick="completeTask()" class="verify-btn">Yes, verify.</button>
                             <button class="check-btn">Check again</button>
                         </div>
                     </div>
