--- a/mission.html
+++ b/mission.html
@@ -180,20 +180,20 @@
                         <div class="award-penalty">
                             <!-- verify award box -->
                             <div class="award-box">
-                                <p class="award-text">+500</p>
+                                <p id="reward-amounts" class="award-amount">+500</p>
                                 <p class="award">Reward</p>
                             </div>
                             <p>vs</p>
                             <!-- verify penalty box -->
                             <div class="penalty-box">
-                                <p class="penalty-text">-1000</p>
+                                <p class="penalty-amount">-1000</p>
                                 <p class="penalty">Penalty</p>
                             </div>
                         </div>
                         <!-- verify btn -->
                         <div class="verify-btns">
                             <button onclick="completeTask()" class="verify-btn">Yes, verify.</button>
-                            <button class="check-btn">Check again</button>
+                            <button onclick="checkTask()" class="check-btn">Check again</button>
                         </div>
                     </div>
                 </div>
