--- a/index.html
+++ b/index.html
@@ -76,36 +76,29 @@
                 </div> -->
             </div>
             <!-- homepage bonus box -->
-            <div class="box-award">
-                <!-- daily task box -->
-                <div class="box">
+            <div class="award-container">
+                <div class="box" id="daily-checkin">
                     <div class="bullet"></div>
                     <div class="box-icon">
                         <img src="images/Paomedia-Small-N-Flat-Calendar.svg" alt="Daily Checkin">
                     </div>
-                    <p class="daily-title"><a href="daily checkin.html">Daily Task</a></p>
+                    <h2 class="daily-title"><a href="daily checkin.html">Daily Task</a></h2>
                 </div>
-                <!-- bonuses box -->
-                <div class="box">
+                <div class="box" id="bonuses">
                     <div class="bullet"></div>
                     <div class="box-icon">
                         <img src="images/gold-coin-leprechaun-money-gold-pot-374cc050e2deeac87ef03fa64241b726.png"
                             style="width: 35px; height: 35px;" alt="Bonus">
                     </div>
-                    <p class="daily-title"><a href="bonuses.html">Bonuses</a></p>
+                    <h2 class="daily-title"><a href="bonuses.html">Bonuses</a></h2>
                 </div>
-                <!-- Daily meme box -->
-                <div class="box">
+                <div class="box" id="daily-meme">
                     <div class="bullet"></div>
-
                     <div class="box-icon">
                         <img src="images/pngegg (6).png" style="width: 35px; height: 35px;" alt="Daily Meme">
                     </div>
-                    <p class="daily-title"><a href="">Daily Meme</a></p>
-                    <div class="come">
-                        <p>coming soon</p>
-                    </div>
-
+                    <h2 class="daily-title"><a href="">Daily Meme</a></h2>
+                    <p>coming soon</p>
                 </div>
             </div>
             <!-- main-box -->
@@ -144,38 +137,30 @@
         </div>
         <!-- footer section -->
         <div class="footer">
-            <div class="footer-box1">
-                <!-- level-footer -->
-                <div class="footer-box">
-                    <a href="level.html"><img src="images/profile-image-1349-svgrepo-com.svg"
-                            style="height: 20px; width:20px" alt=""></a>
-                    <p><a href="level.html">Profile</a></p>
-                </div>
-                <!-- mission-footer -->
-                <div class="footer-box">
-                    <a href="mission.html"><img src="images/task-list-svgrepo-com.svg" style="height: 20px; width:20px;"
-                            alt=""></a>
-                    <p><a href="mission.html">Missions</a></p>
-                </div>
+            <div class="footer-item">
+                <a href="level.html"><img src="images/profile-image-1349-svgrepo-com.svg"
+                        style="height: 20px; width:20px" alt=""></a>
+                <p><a href="level.html">Level</a></p>
             </div>
-            <!-- home-footer -->
-            <div class="home">
+            <div class="footer-item">
+                <a href="mission.html"><img src="images/task-list-svgrepo-com.svg" style="height: 20px; width:20px;"
+                        alt=""></a>
+                <p><a href="mission.html">Missions</a></p>
+            </div>
+            <div class="footer-item">
                 <a href="index.html"><img src="images/Transparent Ton Catel logo.png" alt="Ton Catel logo"
-                        style="height: 50px; width:50px; border-radius: 50%; box-shadow: 0 0 50px #ccc; background-color: #ccc; opacity: 0.9;"></a>
+                        style="height: 50px; width:50px; border-radius: 50%; box-shadow: 0 0 50px #ccc; background-color: #ccc; opacity: 0.9;">
+                </a>
             </div>
-            <!-- invite-footer -->
-            <div class="footer-box1">
-                <div class="footer-box">
-                    <a href="invites.html"><img src="images/friend-svgrepo-com.svg" style="height: 20px; width:30px"
-                            alt=""></a>
-                    <p><a href="invites.html">Invites</a></p>
-                </div>
-                <!-- update-footer -->
-                <div class="footer-box">
-                    <a href="updates.html"><img src="images/screwdriver-wrench-svgrepo-com.svg"
-                            style="height: 20px; width:20px" alt=""></a>
-                    <p><a href="updates.html">Update</a></p>
-                </div>
+            <div class="footer-item">
+                <a href="invites.html"><img src="images/friend-svgrepo-com.svg" style="height: 20px; width:30px"
+                        alt=""></a>
+                <p><a href="invites.html">Invites</a></p>
+            </div>
+            <div class="footer-item">
+                <a href="updates.html"><img src="images/screwdriver-wrench-svgrepo-com.svg"
+                        style="height: 20px; width:20px" alt=""></a>
+                <p><a href="updates.html">Update</a></p>
             </div>
         </div>
     </div>
