--- a/index.html
+++ b/index.html
@@ -64,13 +64,16 @@
                 <div class="level">
                     <div class="level-name">
                         <p>Mew</p>
-                        <i class="fa-solid fa-chevron-right"></i>
+                        <!-- <i class="fa-solid fa-chevron-right"></i> -->
+                        <i class='bx bx-chevron-right'></i>
                     </div>
                     <p class="lvl"><a href="level.html">Level 1</a></p>
                 </div>
                 <!-- homepage progress bar -->
-                <label for="progress-bar"></label>
-                <progress id="progress-bar" max="100" value="50"></progress>
+                <div class="progress-area">
+                    <label for="progress-bar"></label>
+                    <progress id="progress-bar" max="100" value="50"></progress>
+                </div>
                 <!-- <div class="progress-gradient">
                     <div class="gradient-bar"></div>
                 </div> -->
