--- a/mission.html
+++ b/mission.html
@@ -207,38 +207,29 @@
     </div>
     <!-- footer section -->
     <div class="footer">
-        <div class="footer-box1">
-            <!-- level-footer -->
-            <div class="footer-box">
-                <a href="level.html"><img src="images/profile-image-1349-svgrepo-com.svg"
-                        style="height: 20px; width:20px" alt=""></a>
-                <p><a href="level.html">Profile</a></p>
-            </div>
-            <!-- mission-footer -->
-            <div class="footer-box">
-                <a href="mission.html"><img src="images/task-list-svgrepo-com.svg" style="height: 20px; width:20px;"
-                        alt=""></a>
-                <p><a href="mission.html">Missions</a></p>
-            </div>
+        <div class="footer-item">
+            <a href="level.html"><img src="images/profile-image-1349-svgrepo-com.svg" style="height: 20px; width:20px"
+                    alt=""></a>
+            <p><a href="level.html">Level</a></p>
         </div>
-        <!-- home-footer -->
-        <div class="home">
+        <div class="footer-item">
+            <a href="mission.html"><img src="images/task-list-svgrepo-com.svg" style="height: 20px; width:20px;"
+                    alt=""></a>
+            <p><a href="mission.html">Missions</a></p>
+        </div>
+        <div class="footer-item">
             <a href="index.html"><img src="images/Transparent Ton Catel logo.png" alt="Ton Catel logo"
-                    style="height: 50px; width:50px; border-radius: 50%; box-shadow: 0 0 50px #ccc; background-color: #ccc; opacity: 0.9;"></a>
+                    style="height: 50px; width:50px; border-radius: 50%; box-shadow: 0 0 50px #ccc; background-color: #ccc; opacity: 0.9;">
+            </a>
         </div>
-        <!-- invite-footer -->
-        <div class="footer-box1">
-            <div class="footer-box">
-                <a href="invites.html"><img src="images/friend-svgrepo-com.svg" style="height: 20px; width:30px"
-                        alt=""></a>
-                <p><a href="invites.html">Invites</a></p>
-            </div>
-            <!-- update-footer -->
-            <div class="footer-box">
-                <a href="updates.html"><img src="images/screwdriver-wrench-svgrepo-com.svg"
-                        style="height: 20px; width:20px" alt=""></a>
-                <p><a href="updates.html">Update</a></p>
-            </div>
+        <div class="footer-item">
+            <a href="invites.html"><img src="images/friend-svgrepo-com.svg" style="height: 20px; width:30px" alt=""></a>
+            <p><a href="invites.html">Invites</a></p>
+        </div>
+        <div class="footer-item">
+            <a href="updates.html"><img src="images/screwdriver-wrench-svgrepo-com.svg" style="height: 20px; width:20px"
+                    alt=""></a>
+            <p><a href="updates.html">Update</a></p>
         </div>
     </div>
 </body>
