changes on level page

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <!-- main-box-coin-balance -->
                 <div class="homepage-balance">
-                    <div class="coin-amount">
+                    <div class="coin-amount" id="coin-amount">
                         <img src="images/Transparent Ton Catel logo.png" style="height: 25px; width: 25px;">
                         <p>0</p>
                     </div>
