--- a/invites.html
+++ b/invites.html
@@ -49,12 +49,12 @@
             </div>
             <!-- invite-notice -->
             <div class="invites-notice">
-                <p>Earn 500 Gato for each recuit</p>
+                <p>Earn 50 Coin for each recuit</p>
                 <p>Earn 5% of your soldiers earnings</p>
                 <p>❗Avoid recruiting Bots,GANGWAR is coming❗</p>
             </div>
             <!-- invities no. of recurits -->
-            <p id="no-recurit">0 soldiers</p>
+            <p id="no-recurit" class="no-recurit">0 Invites</p>
             <!-- invites-box -->
             <div class="invites-box">
                 <!-- invites-row -->
@@ -66,7 +66,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
                 <!-- invites-row -->
@@ -78,7 +78,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
                 <!-- invites-row -->
@@ -90,7 +90,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
                 <!-- invites-row -->
@@ -102,7 +102,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
                 <!-- invites-row -->
@@ -114,7 +114,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
                 <!-- invites-row -->
@@ -126,7 +126,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
                 <!-- invites-row -->
@@ -138,7 +138,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
                 <!-- invites-row -->
@@ -150,7 +150,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
                 <!-- invites-row -->
@@ -162,7 +162,7 @@
                     <div class="invites-row-box">
                         <!-- name of the invite -->
                         <p>recurit name</p>
-                        <p class="invite-amount">2000 Gato</p>
+                        <p class="invite-amount">2000 coin</p>
                     </div>
                 </div>
             </div>
