--- a/level.html
+++ b/level.html
@@ -41,7 +41,7 @@
                             <!-- level name -->
                             <p class="lvl-name">Lv1-Mew</p>
                             <!-- level coin -->
-                            <p class="lvl-coin">0 Gato</p>
+                            <p class="lvl-coin">0 coin</p>
                             <!-- level farming speed -->
                             <p class="level-speed">1000/4hrs</p>
                         </div>
@@ -57,7 +57,7 @@
                             <!-- level name -->
                             <p class="lvl-name">Lv2-Stray Cat</p>
                             <!-- level coin -->
-                            <p class="lvl-coin">20,000 Gato</p>
+                            <p class="lvl-coin">20,000 coins</p>
                             <!-- level farming speed -->
                             <p class="level-speed">1500/4hrs</p>
                             <!-- level upgrade-btn -->
@@ -87,7 +87,7 @@
                             <!-- level name -->
                             <p class="lvl-name">Lv3-Worker</p>
                             <!-- level coin -->
-                            <p class="lvl-coin">40,000 Gato</p>
+                            <p class="lvl-coin">40,000 coins</p>
                             <!-- level speed -->
                             <p>3000/4hrs</p>
                             <!-- level uprade-btn -->
@@ -96,13 +96,23 @@
                             </div>
                             <!-- level requirement -->
                             <div class="requirement">
-                                <div class="requirement1">
-                                    <label>Coins</label>
-                                    <input type="checkbox">
+                                <div class="requirement1" id="level-3">
+                                    <label>Coins: <span id="coins-3">0/</span><span
+                                            id="required-coins-3">40000</span></label>
+                                    <!-- <label id="coins-3">Coins</label> -->
+                                    <label for="coins" class="custom-checkbox">
+                                        <input type="checkbox" id="checkbox-coins-3" disabled>
+                                        <span class="checkmark" id="checkbox-3"></span>
+                                    </label>
                                 </div>
                                 <div class="requirement2">
-                                    <label>2 Recruit</label>
-                                    <input type="checkbox">
+                                    <label>Invites: <span id="invites-3">0/</span><span
+                                            id="reqired-invites-3">2</span></label>
+                                    <!-- <label id="inites-3">2 Recruit</label> -->
+                                    <label for="recruit" class="custom-checkbox">
+                                        <input type="checkbox" id="checkbox-invites-3" disabled>
+                                        <span class="checkmark" id="checkbox-invites-3"></span>
+                                    </label>
                                 </div>
                             </div>
                             <!-- level bypass-btn -->
@@ -133,7 +143,7 @@
                             <!-- level name -->
                             <p class="lvl-name">Lv4-Solider</p>
                             <!-- level-coin -->
-                            <p class="lvl-coin">60,000 Gato</p>
+                            <p class="lvl-coin">60,000 coins</p>
                             <!-- level-speed -->
                             <p>4000/4hrs</p>
                             <!-- level upgrade-btn -->
@@ -164,7 +174,7 @@
                             <!-- level-name -->
                             <p class="lvl-name">Lv5-Associate</p>
                             <!-- level-coin -->
-                            <p class="lvl-coin">80,000 Gato</p>
+                            <p class="lvl-coin">80,000 coins</p>
                             <!-- level farming speed -->
                             <p class="level-speed">7000/4hrs</p>
                             <!-- level upgrade-btn -->
@@ -174,12 +184,20 @@
                             <!-- level uprade-requirement -->
                             <div class="requirement">
                                 <div class="requirement1">
-                                    <label>Coins</label>
-                                    <input type="checkbox">
+                                    <label>Coins: <span id="coins-5">0/</span><span
+                                            id="required-coins-5">80000</span></label>
+                                    <label for="coins" class="custom-checkbox">
+                                        <input type="checkbox" id="checkbox-coins-5" disabled>
+                                        <span class="checkmark" id="checkbox-5"></span>
+                                    </label>
                                 </div>
                                 <div class="requirement2">
-                                    <label>5 Recruit</label>
-                                    <input type="checkbox">
+                                    <label>Invites: <span id="invites-5">0/</span><span
+                                            id="reqired-invites-5">5</span></label>
+                                    <label for="recruit" class="custom-checkbox">
+                                        <input type="checkbox" id="checkbox-invites-5" disabled>
+                                        <span class="checkmark" id="checkbox-invites-5"></span>
+                                    </label>
                                 </div>
                             </div>
                             <!-- level bypass-btn -->
@@ -209,7 +227,7 @@
                             <!-- level name -->
                             <p class="lvl-name">Lv6-Underboss</p>
                             <!-- level coin -->
-                            <p class="lvl-coin">100,000 Gato</p>
+                            <p class="lvl-coin">100,000 coins</p>
                             <!-- level farming speed  -->
                             <p class="level-speed">10,000/4hrs</p>
                             <!-- level upgrade btn -->
@@ -240,7 +258,7 @@
                             <!-- level name -->
                             <p class="lvl-name">Lv7-Boss</p>
                             <!-- level coin -->
-                            <p class="lvl-coin">150,000 Gato</p>
+                            <p class="lvl-coin">150,000 coins</p>
                             <!-- level farming speed -->
                             <p class="level-speed">13,000/4hrs</p>
                             <!-- level-upgrade-btn -->
@@ -250,12 +268,20 @@
                             <!-- level upgrade requirement section -->
                             <div class="requirement">
                                 <div class="requirement1">
-                                    <label>Coins</label>
-                                    <input type="checkbox">
+                                    <label>Coins: <span id="coins-7">0/</span><span
+                                            id="required-coins-7">150000</span></label>
+                                    <label for="coins" class="custom-checkbox">
+                                        <input type="checkbox" id="checkbox-coins-7" disabled>
+                                        <span class="checkmark" id="checkbox-7"></span>
+                                    </label>
                                 </div>
                                 <div class="requirement2">
-                                    <label>10 Recruit</label>
-                                    <input type="checkbox">
+                                    <label>Invites: <span id="invites-7">0/</span><span
+                                            id="reqired-invites-7">10</span></label>
+                                    <label for="recruit" class="custom-checkbox">
+                                        <input type="checkbox" id="checkbox-invites-7" disabled>
+                                        <span class="checkmark" id="checkbox-invites-7"></span>
+                                    </label>
                                 </div>
                             </div>
                             <!-- level bypass-btn -->
@@ -284,7 +310,7 @@
                         <!-- level box-text -->
                         <div class="lvlbox-text">
                             <p class="lvl-name">Lv8-Cato</p>
-                            <p class="lvl-coin">200,000 Gato</p>
+                            <p class="lvl-coin">200,000 coins</p>
                             <p class="level-speed">15,000/4hrs</p>
                             <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
@@ -314,7 +340,7 @@
                             <!-- level name -->
                             <p class="lvl-name">Lv9-Don</p>
                             <!-- level coin -->
-                            <p class="lvl-coin">400,000 Gato</p>
+                            <p class="lvl-coin">400,000 coins</p>
                             <!-- level farming speed -->
                             <p class="level-speed">17,000/4hrs</p>
                             <!-- level upgrade-btn -->
@@ -324,12 +350,20 @@
                             <!-- level requirement -->
                             <div class="requirement">
                                 <div class="requirement1">
-                                    <label>Coins</label>
-                                    <input type="checkbox">
+                                    <label>Coins: <span id="coins-9">0/</span><span
+                                            id="required-coins-9">400000</span></label>
+                                    <label for="coins" class="custom-checkbox">
+                                        <input type="checkbox" id="checkbox-coins-9" disabled>
+                                        <span class="checkmark" id="checkbox-9"></span>
+                                    </label>
                                 </div>
                                 <div class="requirement2">
-                                    <label>15 Recruit</label>
-                                    <input type="checkbox">
+                                    <label>Invites: <span id="invites-9">0/</span><span
+                                            id="reqired-invites-9">15</span></label>
+                                    <label for="recruit" class="custom-checkbox">
+                                        <input type="checkbox" id="checkbox-invites-9" disabled>
+                                        <span class="checkmark" id="checkbox-invites-9"></span>
+                                    </label>
                                 </div>
                             </div>
                             <!-- level bypass-btn -->
@@ -361,7 +395,7 @@
                             <!-- level name -->
                             <p class="lvl-name">Lv10-Lord</p>
                             <!-- level coin -->
-                            <p class="lvl-coin">500,000 Gato</p>
+                            <p class="lvl-coin">500,000 coins</p>
                             <p>GP</p>
                             <!-- level farming speed -->
                             <p class="level-speed">19,000/4hrs</p>
@@ -443,7 +477,13 @@
 
             </div>
         </div>
+        <!-- <div class="spefic">
+            <button onclick="addCoin(9)">Add Coin (level 3)</button>
+            <button onclick="addInvite(9)">Add Invites (level 3)</button>
+        </div> -->
     </div>
+
+
     <!-- footer section -->
     <div class="footer">
         <div class="footer-item">
